[tool.poetry]
name = "soundcloud-api-client"
version = "0.1.0"
description = "Soundcloud API v2 client"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.25.1"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
